--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,7 +18,7 @@ include = ["bindings/rust/*", "grammar.js", "queries/*", "src/*"]
 path = "bindings/rust/lib.rs"
 
 [dependencies]
-tree-sitter-c2rust = ">= 0.19, < 0.21"
+tree-sitter-c2rust = { git = "https://github.com/liamrosenfeld/tree-sitter", branch = "cfg-fix" }
 
 [build-dependencies]
 cc = "~1.0"
